--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -369,7 +369,7 @@
             <div class="display-header d-flex justify-content-between pb-3">
                 <h2 class="display-7 text-dark text-uppercase">베스트셀러</h2>
                 <div class="btn-right">
-                    <a href="shop.html" class="btn btn-medium btn-normal text-uppercase">바로가기</a>
+                    <a href="http://localhost:8010/category/list#homeTabBest" class="btn btn-medium btn-normal text-uppercase">바로가기</a>
                 </div>
             </div>
             <div class="swiper product-swiper">
@@ -377,7 +377,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabBest">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -395,7 +397,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabBest">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -413,7 +417,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabBest">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -431,7 +437,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabBest">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -476,7 +484,7 @@
             <div class="display-header d-flex justify-content-between pb-3">
                 <h2 class="display-7 text-dark text-uppercase">무료 eBook</h2>
                 <div class="btn-right">
-                    <a href="shop.html" class="btn btn-medium btn-normal text-uppercase">바로가기</a>
+                    <a href="http://localhost:8010/category/list#homeTabFree" class="btn btn-medium btn-normal text-uppercase">바로가기</a>
                 </div>
             </div>
             <div class="swiper product-watch-swiper">
@@ -484,7 +492,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabFree">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -502,7 +512,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabFree">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -520,7 +532,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabFree">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -538,7 +552,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabFree">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -556,7 +572,9 @@
                     <div class="swiper-slide">
                         <div class="product-card position-relative">
                             <div class="image-holder">
+                                <a href="http://localhost:8010/category/list#homeTabFree">
                                 <img style="width:310px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="product-item" class="img-fluid">
+                                </a>
                             </div>
                             <div class="cart-concern position-absolute">
                                 <div class="cart-button d-flex">
@@ -597,14 +615,16 @@
             <div class="display-header d-flex justify-content-between pb-3">
                 <h2 class="display-7 text-dark text-uppercase">새로나온 eBook</h2>
                 <div class="btn-right">
-                    <a href="blog.html" class="btn btn-medium btn-normal text-uppercase">바로 가기</a>
+                    <a href="http://localhost:8010/category/list#homeTabNew" class="btn btn-medium btn-normal text-uppercase">바로 가기</a>
                 </div>
             </div>
             <div class="post-grid d-flex flex-wrap justify-content-between">
                 <div class="col-lg-4 col-sm-12">
                     <div class="card border-none me-3">
                         <div class="card-image">
+                            <a href="http://localhost:8010/category/list#homeTabNew">
                             <img style="width:414px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="" class="img-fluid">
+                            </a>
                         </div>
                     </div>
                     <div class="card-body text-uppercase">
@@ -620,7 +640,9 @@
                 <div class="col-lg-4 col-sm-12">
                     <div class="card border-none me-3">
                         <div class="card-image">
+                            <a href="http://localhost:8010/category/list#homeTabNew">
                             <img style="width:414px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="" class="img-fluid">
+                            </a>
                         </div>
                     </div>
                     <div class="card-body text-uppercase">
@@ -636,7 +658,9 @@
                 <div class="col-lg-4 col-sm-12">
                     <div class="card border-none me-3">
                         <div class="card-image">
+                            <a href="http://localhost:8010/category/list#homeTabNew">
                             <img style="width:414px; height:418px;" src="https://image.aladin.co.kr/product/32860/35/cover/e712532694_1.jpg" alt="" class="img-fluid">
+                            </a>
                         </div>
                     </div>
                     <div class="card-body text-uppercase">
@@ -889,6 +913,12 @@
         </div>
     </div>
 </div>
+<script>
+    function redirectToBestCategory() {
+        // 이미지 클릭 시 원하는 카테고리 페이지로 이동
+        window.location.href = 'http://localhost:8010/category/list#homeTabBest';
+    }
+</script>
 <script src="js/jquery-1.11.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/swiper/swiper-bundle.min.js"></script>
 <script type="text/javascript" src="js/bootstrap.bundle.min.js"></script>
