--- a/src/main/resources/templates/usernameEmail.html
+++ b/src/main/resources/templates/usernameEmail.html
@@ -16,7 +16,8 @@
             <table border="0" cellpadding="0" cellspacing="0" width="600">
                 <tr>
                     <td>
-
+                        <h1>아이디 찾기를 위한 코드입니다.</h1>
+                    <p></p>
                     </td>
                 </tr>
             </table>
