--- a/src/main/resources/templates/faq/faq_modifyForm.html
+++ b/src/main/resources/templates/faq/faq_modifyForm.html
@@ -87,36 +87,19 @@
         </div>
         <div class="container p-3">
             <a class="d-flex align-items-center pb-3 mb-3 link-body-emphasis text-decoration-none border-bottom">
-                <span class="fs-5 fw-semibold">FAQ</span>
+                <span class="fs-5 fw-semibold">FAQ 수정</span>
             </a>
-            <div>
-                <div class=" d-flex justify-content-end">
-                    <a th:block sec:authorize="hasRole('ADMIN')" th:href="@{/faq/create}" class="btn btn-primary btn-sm">작성</a>
+            <form th:action="@{/faq/modify/{id}(id=${faq.id})}" method="post">
+                <div class="mb-3">
+                    <label for="title" class="form-label">제목</label>
+                    <input type="text" th:field="${faq.title}" name="title" id="title" class="form-control">
                 </div>
-                <div class="accordion">
-                    <div class="accordion">
-                        <div class="accordion-item" th:each="faq, iterStat : ${faqList}">
-                            <h2 class="accordion-header" th:id="'accordionExample-' + ${iterStat.index}">
-                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                                        th:data-bs-target="'#collapse-' + ${iterStat.index}" aria-expanded="false"
-                                        aria-controls="'collapse-' + ${iterStat.index}">
-                                    <a th:text="${faq.title}"></a>
-                                </button>
-                            </h2>
-                            <div th:id="'collapse-' + ${iterStat.index}" class="accordion-collapse collapse"
-                                 th:data-bs-parent="'#accordionExample-' + ${iterStat.index}">
-                                <div class="accordion-body">
-                                    <div class="d-flex justify-content-end" sec:authorize="hasRole('ADMIN')">
-                                        <a th:href="@{|/faq/modify/${faq.id}|}" class="btn btn-primary btn-sm" th:text="수정"></a>
-                                        <a th:href="@{|/faq/delete/${faq.id}|}" class="btn btn-primary btn-sm mx-2" th:text="삭제"></a>
-                                    </div>
-                                    <a th:text="${faq.content}"></a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
+                <div class="mb-3">
+                    <label for="content" class="form-label">내용</label>
+                    <textarea  th:field="${faq.content}" name="content" id="content" class="form-control" rows="10"></textarea>
                 </div>
-            </div>
+                <input type="submit" value="저장하기" class="btn btn-primary my-2">
+            </form>
         </div>
     </div>
 </div>
