popup_button_enhancement

--- a/src/main/resources/templates/mainhome.html
+++ b/src/main/resources/templates/mainhome.html
@@ -889,6 +889,8 @@
                                     data-shape="pc"
                                     data-support-multiple-densities="true"
                             ></div>
+                            <!--결제 테스트를 위한 임시 버튼(추후 이동예정)-->
+                            <button onclick="window.open('http://localhost:8010/member/login', '로그인창', 'width=430, height=500, location=no, status=no, scrollbars=yes, top=150,left=400');">팝업 테스트 버튼</button>
                         </div>
                     </div>
                 </div>
